<resources>
    <string name="app_name">Campeonato VT</string>
    <string name="txt_created_championships">Campeonatos criados:</string>
    <string name="title_championships">Campeonatos</string>
    <string name="title_criar_campeonato">Criar campeonato</string>
    <string name="body1_create_championship">Escolha um nome para o seu novo campeonato.</string>
    <string name="body2_create_championship">Escolha o tipo de descarte adotado pelo campeonato.</string>
    <string name="btn_create">Criar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="hint_championship">Campeonato</string>
    <string name="body1_remove_championship">Você realmente deseja remover o campeonato?</string>
    <string name="btn_remove">Remover</string>
    <string name="txt_created_steps">Etapas criadas:</string>
    <string name="title_steps">Etapas</string>
    <string name="body1_create_step">Escolha um nome para sua nova etapa.</string>
    <string name="title_create_step">Criar etapa</string>
    <string name="hint_step">Etapa</string>
    <string name="body1_remove_step">Você realmente deseja remover a etapa?</string>
    <string name="menu_scoreboard">Pontuação</string>
    <string name="menu_pilots">Pilotos</string>
    <string name="menu_discards">Descartes</string>
    <string name="title_tests">Provas</string>
    <string name="txt_created_tests">Provas criadas:</string>
    <string name="title_create_test">Criar prova</string>
    <string name="body1_create_test">Escolha um nome para sua nova prova.</string>
    <string name="hint_test">Prova</string>
    <string name="body1_remove_test">Você realmente deseja remover a prova?</string>
    <string name="txt_created_races">Corridas criadas:</string>
    <string name="title_race">Corridas</string>
    <string name="body1_remove_race">Você realmente deseja remover a corrida?</string>
    <string name="title_create_race">Criar corrida</string>
    <string name="body1_create_race">Escolha um nome para sua nova corrida.</string>
    <string name="hint_race">Corrida</string>
</resources>
